# ChangeLog for app-misc/ifp-line
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/ifp-line/ChangeLog,v 1.18 2007/02/21 22:32:28 peper Exp $

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  28 Jan 2007; Marius Mauch <genone@gentoo.org> ifp-line-0.3.ebuild:
  Replacing einfo with elog

  05 Feb 2006; Tobias Scherbaum <dertobi123@gentoo.org> ifp-line-0.3.ebuild:
  re-keyworded ~ppc, bug #121179

*ifp-line-0.3 (01 Feb 2006)

  01 Feb 2006; Patrick McLean <chutzpah@gentoo.org>
  +files/ifp-line-0.3-fix-warnings.patch, +ifp-line-0.3.ebuild:
  Version bump, added instructions on activating non-root mode and added a patch
  to fix some compile warnings. Thanks to Przemyslaw Maciag for contributing the
  ebuild some of the non-root mode information is based on.

  27 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> ifp-line-0.2.4.5.ebuild:
  Stable on ppc.

  28 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  -ifp-line-0.2.3.ebuild, ifp-line-0.2.4.5.ebuild:
  Stable amd64, sparc, x86.

*ifp-line-0.2.4.5 (25 Nov 2004)

  25 Nov 2004; Hanno Boeck <hanno@gentoo.org> +ifp-line-0.2.4.5.ebuild:
  Version bump.

  18 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  ifp-line-0.2.4.4.ebuild:
  Fixed doc dir mentioned in einfo.

  18 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  ifp-line-0.2.4.4.ebuild:
  Stable amd64, sparc, x86.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  ifp-line-0.2.4.2.ebuild:
  Masked ifp-line-0.2.4.2.ebuild stable for ppc

*ifp-line-0.2.4.4 (07 Sep 2004)

  07 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +ifp-line-0.2.4.4.ebuild:
  Version bump.

  01 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  ifp-line-0.2.4.2.ebuild:
  Stable on amd64 x86 sparc.

  17 Jul 2004; David Holm <dholm@gentoo.org> ifp-line-0.2.4.2.ebuild:
  Added to ~ppc.

*ifp-line-0.2.4.2 (09 Jul 2004)
