@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/ifp-line
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/ifp-line/ChangeLog,v 1.18 2007/02/21 22:32:28 peper Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ifp-line/ChangeLog,v 1.19 2009/05/10 16:27:22 ssuominen Exp $
+
+  10 May 2009; Samuli Suominen <ssuominen@gentoo.org>
+  -ifp-line-0.2.4.2.ebuild, -ifp-line-0.2.4.4.ebuild,
+  ifp-line-0.2.4.5.ebuild, ifp-line-0.3.ebuild:
+  Don't specify ecompress format wrt #260782
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
